# claude-django

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: api-architect.md  auditor.md  ba.md  brief-synthesizer.md  celery-specialist.md  ci-cd-engineer.md  dba.md  debugger.md  devil.md  devops.md  django-developer.md  django-refactoring-expert.md  docs-writer.md  domain-architect.md  frontend.md  integration-architect.md  qa.md  reviewer.md  security-scanner.md  tester.md
.claude/commands/: audit.md  bootstrap.md  create-pr.md  doctor.md  fix-ci.md  handoff.md  kickoff.md  preflight.md  review-pr.md  security-check.md  set-language.md  simplify.md  synthesize-brief.md  update-docs.md  wrap-up.md
.claude/memory/: command-log.jsonl  env-detect.json
.claude/rules/: api-docs.md  app-readme.md  architecture.md  code-style.md  docker-commands.md  environment.md  git-operations.md  mcp-stack.md  migrations-tasks.md  no-stubs.md  preflight.md  serializers-permissions.md  tdd.md  testing.md  workflow.md
docs/: HANDOFF.md  WORKLOG.md  lessons.md
docs/decisions/: 0001-tdd-outside-in-at-api-boundary.md  (+4 more)
scripts/: detect-env.py  log-cmd.py
templates/: .env.example  APP_README.md  HANDOFF.md  PROJECT.md  PROJECT_README.md  STUBS.md  WORKLOG.md  api_INDEX.md  backend.Dockerfile  docker-compose.yml  lessons.md  output-language.md  pyproject.toml  todo.md
templates/.github/workflows/: backend-ci.yml  frontend-ci.yml
templates/scripts/: check_app_readmes.sh  check_openapi_drift.sh  check_stubs.sh
(+18 files in other folders)
